--- a/modlist.html
+++ b/modlist.html
@@ -261,4 +261,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flopper">Flopper (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/engineers-decor">Engineer's Decor (by wilechaote)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/connected-glass">Connected Glass (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/rhino">Rhino (by LatvianModder)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-forge">KubeJS (Forge) (by LatvianModder)</a></li>
 </ul>
