--- a/modlist.html
+++ b/modlist.html
@@ -1,5 +1,6 @@
 ﻿<ul>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/tool-belt">Tool Belt (by gigaherz)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/inzhefop-core">inzhefop's Core (by inzhefop)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/botania">Botania (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/compressium">Compressium (by DinnerBeef)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/chargers">Chargers (by GoryMoon)</a></li>
@@ -62,6 +63,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shetiphiancore">ShetiPhianCore (by ShetiPhian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-conjurer">The Conjurer (by ModdingLegacy)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/passive-endermen">Passive Endermen (Forge) (by Serilum)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-filters">Item Filters (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
@@ -70,7 +72,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-crafting">Integrated Crafting (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nuclear-science">Nuclear Science (by aurilisdev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/nutritional-balance">Nutritional Balance (by Danny_and_Son)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/extended-crafting">Extended Crafting (by BlakeBr0)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/pretty-pipes">Pretty Pipes (by Ellpeck)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/toast-control">Toast Control (by Shadows_of_Fire)</a></li>
@@ -99,10 +100,10 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/findme">FindMe (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-cultivation">Thermal Cultivation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/natures-compass">Nature's Compass (by Chaosyr)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/endertanks">EnderTanks (by ShetiPhian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simple-storage-network">Simple Storage Network (by Lothrazar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclops-core">Cyclops Core (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-and-walls">Macaw's Fences and Walls (by sketch_macaw)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/codechicken-lib-1-8">CodeChicken Lib 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/wall-jump">Wall-Jump! [FORGE] (by genandnic)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/framedblocks">FramedBlocks (by XFactHD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ceiling-torch">Ceiling Torch (by bl4ckscor3)</a></li>
@@ -129,7 +130,6 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flywheel">Flywheel (by jozufozu)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rechiseled">Re-chiseled (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cosmetic-armor-reworked">Cosmetic Armor Reworked (by LainMI)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/enderchests">EnderChests (by ShetiPhian)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hunterillager">Hunter illager (by bagu_chan500)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/curios">Curios API (Forge) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advent-of-ascension-nevermine">Advent of Ascension (Nevermine) (by Scimiguy)</a></li>
@@ -138,6 +138,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-windows">Macaw's Windows (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hammer-lib">Hammer Lib (by Zeitheron)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farming-for-blockheads">Farming for Blockheads (by BlayTheNinth)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ender-storage-1-8">Ender Storage 1.8.+ (by covers1624)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-control">RFTools Control (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/itemphysic">ItemPhysic Full (by CreativeMD)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/entangled">Entangled (by SuperMartijn642)</a></li>
@@ -166,12 +167,13 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-utility">RFTools Utility (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/morph-o-tool">Morph-o-Tool (by Vazkii)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aquatic-torches">Aquatic Torches (by realmayus)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/goblin-traders">Goblin Traders (by MrCrayfish)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-gauges-and-switches">Gauges and Switches (by wilechaote)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/selene">Selene Lib (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-grinding-utils">Mob Grinding Utils (by vadis365)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-reforged">Avaritia:Reforged (by cnlimiter)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/assemblylinemachines">Assembly Line Machines (by haydenman2)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-storage">Refined Storage (by raoulvdberge)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/ore-excavation">Ore Excavation (by Funwayguy)</a></li>
@@ -226,6 +228,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/iron-furnaces">Iron Furnaces [FORGE] (by XenoMustache)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/farmers-delight">Farmer's Delight (by vectorwing)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/supermartijn642s-core-lib">SuperMartijn642's Core Lib (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/ftb-essentials-forge">FTB Essentials (Forge) (by FTB)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/fast-leaf-decay">Fast Leaf Decay (by olafskiii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-weirding-gadget">The Weirding Gadget (by AtomicBlom)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mouse-tweaks">Mouse Tweaks (by YaLTeR)</a></li>
@@ -281,6 +284,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/building-gadgets">Building Gadgets (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/colossal-chests">Colossal Chests (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/portality">Portality (by Buuz135)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/avaritia-furnace">Avaritia Furnace (by inzhefop)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/runelic">Runelic (by DarkhaxDev)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/better-advancements">Better Advancements (by way2muchnoise)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/moving-elevators">Moving Elevators (by SuperMartijn642)</a></li>
