--- a/modlist.html
+++ b/modlist.html
@@ -174,7 +174,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/aquatic-torches">Aquatic Torches (by realmayus)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/goblin-traders">Goblin Traders (by MrCrayfish)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/selene">Selene Lib (by MehVahdJukaar)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/selene">Moonlight Lib (by MehVahdJukaar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/redstone-gauges-and-switches">Gauges and Switches (by wilechaote)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mob-grinding-utils">Mob Grinding Utils (by vadis365)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/assemblylinemachines">Assembly Line Machines (by haydenman2)</a></li>
