--- a/modlist.html
+++ b/modlist.html
@@ -156,6 +156,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/kubejs-thermal">KubeJS Thermal (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shutup-experimental-settings">Shutup Experimental Settings! (by Corgi_Taco)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/carry-on">Carry On (by Tschipp)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/majruszs-progressive-difficulty">Majrusz's Progressive Difficulty (by Majrusz17)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/thermal-foundation">Thermal Foundation (by TeamCoFH)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/spice-of-life-carrot-edition">Spice of Life: Carrot Edition (by lordcazsius)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-dynamics">Integrated Dynamics (by kroeser)</a></li>
@@ -169,6 +170,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/super-circuit-maker">Super Circuit Maker (by amadornes)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xnet">XNet (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bookshelf">Bookshelf (by DarkhaxDev)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/majrusz-library">Majrusz Library (by Majrusz17)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/morph-o-tool">Morph-o-Tool (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rftools-utility">RFTools Utility (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/industrial-foregoing">Industrial Foregoing (by Buuz135)</a></li>
@@ -198,7 +200,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/castle-in-the-sky-the-fairytale-of-laputa">Castle in the Sky (by songxia23)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xp-tome">XP Tome (by bl4ckscor3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/electrodynamics">Electrodynamics (by aurilisdev)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/curio-of-undying">Curio of Undying (Forge) (by TheIllusiveC4)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/charm-of-undying">Charm of Undying (Forge) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mcjtylib">McJtyLib (by McJty)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rhino">Rhino (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hostile-neural-networks">Hostile Neural Networks (by Shadows_of_Fire)</a></li>
