--- a/modlist.html
+++ b/modlist.html
@@ -127,7 +127,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-generators">Mekanism Generators (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-tools">Mekanism Tools (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/large-ore-deposits">Large Ore Deposits (by EnderLanky)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/curious-elytra">Curious Elytra (Forge) (by TheIllusiveC4)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/elytra-slot">Elytra Slot (Forge) (by TheIllusiveC4)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-mob-farm">Easy Mob Farm (by Kaworru)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-piglins">Easy Piglins (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flywheel">Flywheel (by jozufozu)</a></li>
