Update to version 2.1.2

--- a/modlist.html
+++ b/modlist.html
@@ -58,6 +58,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/forgeendertech">ForgeEndertech (by EnderLanky)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-generators">Advanced Generators (by bdew)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/advanced-hook-launchers">Advanced Hook Launchers (by EnderLanky)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-fences-biomes-o-plenty">Macaw's Fences - Biomes O' Plenty (by Samlegamer_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/trash-cans">Trash Cans (by SuperMartijn642)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/occultism">Occultism (by kli_kli)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/enchant-with-mob">Enchant With Mob (by bagu_chan500)</a></li>
@@ -65,12 +66,14 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/technicalities-lib">Technicalities: Lib (TKLib) (by amadornes)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cyclic">Cyclic (by Lothrazar)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/shetiphiancore">ShetiPhianCore (by ShetiPhian)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-paintings">Macaw's Paintings (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/the-conjurer">The Conjurer (by ModdingLegacy)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/item-filters">Item Filters (by LatvianModder)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cooking-for-blockheads">Cooking for Blockheads (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/biomes-o-plenty">Biomes O' Plenty (by Forstride)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/mekanism-additions">Mekanism Additions (by bradyaidanc)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/titanium">Titanium (by Buuz135)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-paths-and-pavings">Macaw's Paths and Pavings (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/integrated-crafting">Integrated Crafting (by kroeser)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/jei">Just Enough Items (JEI) (by mezz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/nuclear-science">Nuclear Science (by aurilisdev)</a></li>
@@ -133,6 +136,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/easy-piglins">Easy Piglins (by henkelmax)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/flywheel">Flywheel (by jozufozu)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/rechiseled">Re-chiseled (by SuperMartijn642)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/sophisticated-storage">Sophisticated Storage (by P3pp3rF1y)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/cosmetic-armor-reworked">Cosmetic Armor Reworked (by LainMI)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/hunterillager">Hunter illager (by bagu_chan500)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/curios">Curios API (Forge) (by TheIllusiveC4)</a></li>
@@ -197,6 +201,7 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/quark">Quark (by Vazkii)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/crafting-tweaks">Crafting Tweaks (by BlayTheNinth)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/packing-tape">Packing Tape (by gigaherz)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/swingthroughgrass">SwingThroughGrass (by exidex)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/more-minecarts">More Minecarts and Rails (by goldey3)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/castle-in-the-sky-the-fairytale-of-laputa">Castle in the Sky (by songxia23)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/xp-tome">XP Tome (by bl4ckscor3)</a></li>
@@ -259,8 +264,9 @@
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/terrablender">TerraBlender (Forge) (by TheAdubbz)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-roofs-biomes-o-plenty">Macaw's Roofs - Biomes O' Plenty (by Samlegamer_)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/refined-pipes">Refined Pipes (by raoulvdberge)</a></li>
-<li><a href="https://www.curseforge.com/minecraft/mc-mods/flat-bedrock">Flat Bedrock (by Sunekaer)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/flat-bedrock">Flat Bedrock (Forge / Fabric) (by Sunekaer)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/simply-light">Simply Light (by Flanks255)</a></li>
+<li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-furniture">Macaw's Furniture (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/macaws-bridges">Macaw's Bridges (by sketch_macaw)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/charging-gadgets">Charging Gadgets (by Direwolf20)</a></li>
 <li><a href="https://www.curseforge.com/minecraft/mc-mods/bad-wither-no-cookie-reloaded">Bad Wither No Cookie - Reloaded (by Kreezxil)</a></li>
